<resources>
    <string name="app_name">Dollyx</string>
    <string name="company_name">Captons Inc. \@captonisaac\@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="gallery">Gallery</string>
    <string name="make_a_wish">Make A Wish</string>
    <string name="start_page">Start Page</string>
    <string name="quit">Quit</string>
    <string name="general">General</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_images_grid_view">Image Gallery</string>
    <string name="welcome_msg">Click here to play</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="frame_gif_ids">
        <item>@drawable/frame_12</item>
        <item>@drawable/frame_0</item>
        <item>@drawable/frame_1</item>
        <item>@drawable/frame_2</item>
        <item>@drawable/frame_3</item>
        <item>@drawable/frame_4</item>
        <item>@drawable/frame_5</item>
        <item>@drawable/frame_6</item>
        <item>@drawable/frame_7</item>
        <item>@drawable/frame_8</item>
        <item>@drawable/frame_9</item>
        <item>@drawable/frame_10</item>
        <item>@drawable/frame_11</item>
        <item>@drawable/frame_12</item>
        <item>@drawable/gif_13_1</item>
        <item>@drawable/gif_13_2</item>
        <item>@drawable/gif_13_1</item>
        <item>@drawable/gif_13_2</item>
        <item>@drawable/gif_13_1</item>
        <item>@drawable/gif_13_2</item>
        <item>@drawable/gif_13_1</item>
        <item>@drawable/gif_13_2</item>
        <item>@drawable/gif_14_1</item>
        <item>@drawable/gif_14_2</item>
        <item>@drawable/gif_14_1</item>
        <item>@drawable/gif_14_2</item>
        <item>@drawable/gif_14_1</item>
        <item>@drawable/gif_14_2</item>
        <item>@drawable/gif_14_1</item>
        <item>@drawable/gif_14_2</item>
        <item>@drawable/gif_16_1</item>
        <item>@drawable/gif_16_2</item>
        <item>@drawable/gif_16_3</item>
        <item>@drawable/gif_16_4</item>
        <item>@drawable/gif_16_5</item>
        <item>@drawable/gif_16_6</item>
        <item>@drawable/gif_16_7</item>
        <item>@drawable/gif_16_8</item>
    </string-array>

    <string-array name="image_ids">
        <item>@drawable/dolly6</item>
        <item>@drawable/dolly0</item>
        <item>@drawable/dolly1</item>
        <item>@drawable/dolly3</item>
        <item>@drawable/dolly4</item>
        <item>@drawable/dolly5</item>
        <item>@drawable/dolly7</item>
        <item>@drawable/dolly8</item>
        <item>@drawable/dolly9</item>
        <item>@drawable/dolly10</item>
        <item>@drawable/dolly11</item>
        <item>@drawable/dolly12</item>
    </string-array>
    <string-array name="mainpage_image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
    </string-array>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="copyright"><u>Copyright &#169;Captons, 2016\.</u></string>
    <string name="app_subtitile">(Dorothy\'s Birthday App)</string>
    <string name="about_content">
        fjjglgjdjggkfdgfgjdgjdfl;jgldfjg
        fgdfgdfgdgfgdfgfgfdgdfgfdgfdg
        fgdfgfdgfgfdgdfgdfgfdgdfgg
        ggdfgdfgfdgfdgfdgfdg
        ldfjgdlgfgdfgdfgfgfgdfgdfggfgfdg
        <br></br>...lol.
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_off">Click to Start Playing</string>
    <string name="text_on">Click to Stop playing</string>
    <string name="sent_to">Herh, Who Are You sending this to?&#8230; l0l</string>
    <string name="birthday_msg">HappY 21st AnniverserY, @Dotothy</string>
    <string name="title_activity_preference">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
