<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_startpage"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/start_page" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />

        <item
            android:id="@+id/nav_makewish"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/make_a_wish" />
    </group>

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <!--
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
                -->
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/sym_def_app_icon"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_quit"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/quit" />
        </menu>

    </item>

</menu>
