<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.capton.dollyx.AboutActivity"
    tools:showIn="@layout/activity_about">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/app_subtitile"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/copyright"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/green1"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/app_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView4"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/about_content"
        android:id="@+id/textView5"
        android:layout_below="@id/textView2"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:textAlignment="center"
        android:padding="15dp"
        android:textStyle="normal"
        android:foregroundGravity="center"
        android:gravity="center"
        android:typeface="monospace" />
</RelativeLayout>
